--- a/contact.html
+++ b/contact.html
@@ -8,9 +8,9 @@
     <h1>Victor John's Contact List</h1>
     <hr size="3" noshade>
     <ul>
-      <li>Personal Phone: 09145786546</li>
-      <li>Tel#: 0464835786</li>
-      <li>Email: castillo.victorjohn@gmail.com</li>
+      <li>Personal Phone: 0999516546</li>
+      <li>Tel#: 0124835345</li>
+      <li>Email: ipsumdolorn@gmail.com</li>
     </ul>
 
     <hr size="3" noshade>
