--- a/index.html
+++ b/index.html
@@ -14,16 +14,10 @@
       <td>
         <h1>Victor John</h1>
         <p><em>Tisch University <strong>Professor</strong></em></p>
-        <p>I am a professor at Cornell University. My research focuses on algorithms and networks,
-          the roles they play in large-scale social and information systems,
-          and their broader societal implications.
-          My work has been supported by an NSF Career Award, an ONR Young Investigator Award,
-          a MacArthur Foundation Fellowship, a Packard Foundation Fellowship,
-          a Simons Investigator Award, a Sloan Foundation Fellowship,
-          a Vannevar Bush Faculty Fellowship, and grants from Facebook,
-          Google, Yahoo, the MacArthur Foundation, the ARO, and the NSF.
-          I am a member of the National Academy of Sciences, the National Academy of Engineering,
-          and the American Academy of Arts and Sciences.</p>
+        <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam,
+          quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat.
+          Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. 
+          Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</p>
 
       </td>
     </tr>
@@ -33,9 +27,9 @@
   <hr>
   <h3>Education</h3>
   <ul>
-    <li>College Degree LPU Cavite</li>
-    <li>HighSchool Cavite Community Academy</li>
-    <li>Elementary Maragondon Elementary School</li>
+    <li>Lorem ipsum dolor sit amet</li>
+    <li>Consectetur adipiscing elit</li>
+    <li>Ut enim ad minim veniam</li>
   </ul>
 
   <hr>
@@ -49,11 +43,11 @@
     </thead>
     <tr>
       <td>2017-2019</td>
-      <td>Programmer at HRD</td>
+      <td>Lorem ipsum dolor sit amet</td>
     </tr>
     <tr>
       <td>2019-2022</td>
-      <td>My down side</td>
+      <td>Excepteur sint occaecat cupidatat</td>
     </tr>
   </table>
   <hr>
